made the hover menu stop from overflowing

--- a/scss/components/_sub-menu-hover.scss
+++ b/scss/components/_sub-menu-hover.scss
@@ -36,6 +36,10 @@
                 position: absolute;
                 top: 0;
                 bottom: 0;
+                
+                @media (min-width: 1360px) {
+                    width: 1536px;
+                }
             }
 
             // Pushes pseudo element to left side of screen
