--- a/scss/sections/_navigation.scss
+++ b/scss/sections/_navigation.scss
@@ -9,6 +9,8 @@
     display: block;
     height: fit-content;
     background-color: $primary;
+    // overflow-x: hidden;
+    // border: 2px solid red;
 }
 
 // Nav inner 
@@ -31,6 +33,7 @@
     .nav-item {
         // position: relative;
         flex: 1;
+        width: 100%;
         // Nav Border Styling
         border-right: 1px solid rgba(255, 255, 255, 0.1);
         border-left: 1px solid rgba(0, 0, 0, 0.25);
